# minimal_hnsw

./: .gitignore  CMakeLists.txt  README.md
dense/: CMakeLists.txt  hilbert_ordering.cpp  hilbert_ordering.h  hnsw.cpp  hnsw.h  hnswlib_main.cpp  main.cpp
dense/output/: layer0_cand_elements_counts_insertion.txt  layer0_cand_elements_counts_search.txt  layer0_distance_counts_search.txt  layer0_max_hops_counts_insertion.txt  layer0_max_hops_counts_search.txt
dense/perf/: perf_report_1M_v1.txt  perf_report_1M_v2.txt  perf_report_hnswlib_v1.txt  perf_report_v1.txt  perf_report_v2.txt  perf_report_v3.txt  perf_report_v4.txt  perf_report_v5.txt
dense/scripts/: perf.data  plot_distribution.py  run_hnswlib.sh  run_main.sh
